# fuzzy-encryption

./: .gitignore  CMakeLists.txt  README.md
src/c++/: .gitignore  CMakeLists.txt  README.md
src/c++/fuzzyvault/: CMakeLists.txt  berlwelch.cpp  berlwelch.h  crypto.cpp  crypto.h  exceptions.h  fuzzy.cpp  fuzzy.h  imod.cpp  imod.h  input.cpp  input.h  json.c  matrix.cpp  matrix.h  params.cpp  params.h  parsing.cpp  parsing.h  poly.cpp  poly.h  secret.cpp  secret.h  types.cpp  types.h  utils.cpp  utils.h
src/c++/tests/: CMakeLists.txt
src/c++/tests/demo/: CMakeLists.txt  demo.cpp
src/c++/tests/loadrand/: CMakeLists.txt  cparams.py  loadrand.cpp  test.sh
src/c++/tests/randomtest/: CMakeLists.txt  randomtest.cpp
src/c++/tests/scripts/: demobuild.sh
src/c++/tests/wasmdemo/: runwasm.sh  wasmdemo.cpp  wasmdemobuild.sh  wbuild.sh
src/python/: README.md  fuzzy.py  gauss.py  gen_keys.py  gen_params.py  gen_secret.py  install.sh
src/python/fuzzyvault/: fuzzyvault.py  gen_keys.py  gen_params.py  gen_secret.py  params.json  secret.json  utils.py
src/python/fuzzyvault/old/: rand_trial.py  rec_secret.py  test_all.py  trial.py
src/python/install/: install_for_python.sh  install_old_python.sh  requirements.txt
src/python/schema/: input.json  input_schema.json  jverify.py  params.json  params_schema.json  randinput.json  secret.json  secret_schema.json
src/scripts/android/: .gitignore  android_build.sh  build.sh  build_android.sh  build_ssl.sh  install_ndk.sh  restore.sh
src/scripts/common/: install_prereq.sh  node-install.sh
src/scripts/linux/: azure-linux-build.sh  build.sh  build_ssl.sh
src/scripts/wasm/: build.sh
